--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
 
-    <title>北京联通</title>
+    <title>node_koa2 Demo</title>
     <style>
         html, body {
             overflow: hidden;
